@@ -14,35 +14,62 @@ public class OOM {
     static class OOMObject {
     }
 
+    private int stackLen = 1;
+
+    public void stackLeak() {
+        stackLen++;
+        stackLeak();
+    }
+
     @Test
     public void t1() {
-        List<Integer> d = new ArrayList();
-        d.add(1);
+        List<OOMObject> list = new ArrayList<>();
 
-
-        List<OOMObject> data = new ArrayList<>();
         while (true) {
-            data.add(new OOMObject());
+            list.add(new OOMObject());
         }
-
-
 
     }
 
     @Test
     public void t2() {
-        ArrayList<String> data = new ArrayList(4);
-        data.add("a");
-        data.add("b");
-        data.add("c");
-        data.add("d");
 
-        data.ensureCapacity(5);
-        data.add("e");
+        try {
+            stackLeak();
+        } catch (Exception e) {
+            System.out.println("stackLen:" + stackLen);
+        }
 
-        for(String a : data) {
-            System.out.println(a);
+    }
+
+
+    @Test
+    public void t3() throws Exception {
+        List<OOM> data = new ArrayList();
+
+        Thread.sleep(10 * 1000);
+        while (true) {
+            data.add(new OOM());
         }
     }
-}
 
+    private static final int _1MB = 1024 * 1024;
+
+    /**
+     * -verbose:gc -Xms20m -Xmx20m -Xmn10m -XX:+PrintGCDetails -XX:SurvivorRatio=8
+     */
+    @Test
+    public void t4() {
+        byte[] allocation1, allocation2, allocation3, allocation4;
+
+        allocation1 = new byte[2 * _1MB];
+        allocation2 = new byte[2 * _1MB];
+        allocation3 = new byte[2 * _1MB];
+        allocation4 = new byte[4 * _1MB];
+
+
+
+
+
+    }
+}
